test/integration/bad/decl-mutual-inits.stan
transformed parameters {
  real x = y, y = x;
}
